--- a/src/Keyboard.astro
+++ b/src/Keyboard.astro
@@ -48,14 +48,6 @@ function calculateStyle(rowIndex: number, keyIndex: number){
     </div>
 </div>  
 
-<!--   <div data-key={key} class="arcade-button">
-                            <div class="arcade-button__piston"></div>
-                        </div> -->
-
-<!--                <div data-key={key} class="arcade-button">
-                            <div class="arcade-button__piston"></div>
-                        </div> -->
-
 <script>
     document.querySelectorAll('.arcade-button').forEach(el =>{
         el.addEventListener('mousedown', ()=>{
@@ -82,12 +74,15 @@ function calculateStyle(rowIndex: number, keyIndex: number){
         /* background:orange; */
         position: absolute;
         top: 0;
-        display: flex;
-        justify-content: center;
-        align-items: center;
+        bottom: 0;
+        left: 0;
+        right:0;
+        margin: auto;
         /* background: red; */
-        height: 100%;
+        /* height: 100%; */
+        height: 0;
         width: 100%;
+        max-width: 800px;
         /* transform-origin: ; */
         /* transform: perspective(800px) rotateX(70deg); */
         
@@ -314,7 +309,7 @@ function calculateStyle(rowIndex: number, keyIndex: number){
     .preserve-aspect-ratio{
         position: relative;
         /* background: blue; */
-        width:80%;
+        width:100%;
         padding-bottom: 15%;
     }
 
